# sphinx

./: .coverage  .coveragerc  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  log.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
base_tables/: SIGAME_EXTERNAL_GENDER.sql  SIGAME_EXTERNAL_TIME_EXPERIENCE.sql  SINCAD_EXTERNAL_EMPLOY_POSITIONS.sql  SINCAD_EXTERNAL_EMPLOY_STATUS.sql  SINCAD_EXTERNAL_EMPLOY_TYPES.sql  SINCAD_EXTERNAL_IDENTIFICATION_TYPE.sql  SINCAD_EXTERNAL_ISSUER.sql  SINCAD_EXTERNAL_MARITAL_STATUS.sql  SINCAD_EXTERNAL_NATIONALITY.sql  SINCAD_EXTERNAL_PROFESSIONAL.sql
deployments/: dev-values.yaml  prod-values.yaml  uat-values.yaml
requirements/: common.txt  dev.txt  prod.txt
src/controllers/: base_controller.py
src/domain/: persephone_queue.py
src/exceptions/: exceptions.py
src/i18n/: i18n_resolver.py
src/repositories/: base_repository.py
src/routers/: __init__.py  authenticate.py  authorization.py  bureau_callbacks.py  client_register_enums.py  feature.py  pendencies.py  purchase.py  suitability.py  term.py  user.py  view.py
src/utils/: base_model_normalizer.py  brazil_register_number_validator.py  dictionary_insert.py  email.py  env_config.py  genarate_id.py  jwt_utils.py  language_identifier.py  middleware.py  persephone_templates.py  solutiontech.py  stone_age.py  suitability_calc.py
tests/stub_classes/: stub_base_repository.py  stub_client_register_repository.py  stub_jwt_handler_composition.py  stub_jwt_service_composition.py  stub_middleware_utils.py  (+2 more)
(+322 files in other folders)
